# emad

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  AUTHORS  ChangeLog  ChangeLog.license  Makefile.am  Makefile.in  README  README.license  cmad.c  config.h.in  configure  configure.ac  configure.in  emad.1  emads.c  emads.h
.github/workflows/: ci.yml  pre-commit.yml
.woodpecker/: ci.yaml  pre-commit.yaml
