# SPDX-PackageName: emad
# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
# SPDX-PackageDownloadLocation: https://github.com/rfinnie/emad
# SPDX-FileComment: automake source
# SPDX-FileCopyrightText: © 2003 Nick Moffitt <nick@zork.net>
# SPDX-FileCopyrightText: © 2003 Atob <atob@zork.net>
# SPDX-FileCopyrightText: © 2020 Ryan Finnie <ryan@finnie.org>
# SPDX-License-Identifier: GPL-2.0-or-later

ACLOCAL_AMFLAGS = -I m4

execgamesdir = $(prefix)/games
execgames_PROGRAMS = emad
emad_SOURCES = cmad.c emads.c emads.h
man_MANS = emad.1
EXTRA_DIST = $(man_MANS)
