AC_INIT([emad], [10.0.11.0.0.0.2])
AC_CONFIG_SRCDIR([emads.h])
AM_INIT_AUTOMAKE
AC_CONFIG_MACRO_DIRS([m4])
AM_CONFIG_HEADER(config.h)
AC_LANG_C

AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL

AC_HEADER_STDC

PKG_CHECK_MODULES(NCURSESW, ncursesw, [
                  CFLAGS="$NCURSESW_CFLAGS -DNCURSES_WIDECHAR $CFLAGS"
		  LIBS="$NCURSESW_LIBS $LIBS"
		 ])
AC_CHECK_LIB(panelw,new_panel)

AC_OUTPUT(Makefile)
